foundry/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foundry
  labels:
    name: foundry
