foundry/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foundry
spec:
  selector:
    app: foundry
  ports:
  - port: 80
    targetPort: 30000
    protocol: TCP
    name: http
  type: ClusterIP
