foundry/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foundry
  annotations: 
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
spec:
  rules:
    - host: foundry.noahtutt.dev
      http: 
        paths:
        - backend:
            service: 
              name: foundry 
              port:
                name: http
          path: / 
          pathType: Prefix
  tls:
    - hosts:
      - foundry.noahtutt.dev
      secretName: foundry
